--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/assets/css/output.css" rel="stylesheet">
-    <title>Vite + Vue + TS</title>
+    <title>爬虫管理平台</title>
   </head>
   <body>
     <div id="app"></div>
